--- a/lepiter/lepiter.properties
+++ b/lepiter/lepiter.properties
@@ -1,5 +1,6 @@
 {
 	"uuid" : "72fa251d-36ae-0d00-a262-34ae0ee46b1d",
 	"tableOfContents" : "aqudlxjgg7mvm9amm2dcdc01v",
-	"schema" : "4.1"
+	"schema" : "4.1",
+	"databaseName" : "feenkcom/gt4sudoku/lepiter"
 }
